@@ -16,30 +16,30 @@ EBUILD emacs-cvs-22.0.95-r3.ebuild 6605 RMD160 309fdf7aae95829cfde36986a540e0ae9
 MD5 521b468c7ac6d2709a8b6d4a58d21844 emacs-cvs-22.0.95-r3.ebuild 6605
 RMD160 309fdf7aae95829cfde36986a540e0ae9b2f97dc emacs-cvs-22.0.95-r3.ebuild 6605
 SHA256 bfdc5c5907402a33be1c9f3bed4390f6697df314312574e946a5e31c14cd6a50 emacs-cvs-22.0.95-r3.ebuild 6605
-EBUILD emacs-cvs-22.0.96.ebuild 6600 RMD160 3a3a58d210f8ea431aa8ac57ab6c252c8d24fdcc SHA1 12e2b48927cecdfa72ba314b3ec021646e001125 SHA256 c09289ab4e784f037de43d8032b81a8818f5e938614d81c4de4769df60786e10
-MD5 78d754a8878f6489bed09ec5220fb77e emacs-cvs-22.0.96.ebuild 6600
-RMD160 3a3a58d210f8ea431aa8ac57ab6c252c8d24fdcc emacs-cvs-22.0.96.ebuild 6600
-SHA256 c09289ab4e784f037de43d8032b81a8818f5e938614d81c4de4769df60786e10 emacs-cvs-22.0.96.ebuild 6600
+EBUILD emacs-cvs-22.0.96.ebuild 6654 RMD160 560d6544e3159d4a483fba5845862d7858d3d317 SHA1 30ea9f1eebfca312b47e042c3d916c37cff8d38c SHA256 e430a2e3782391e2723fb18576644786ce69dbf1686db1ac732026781f54e237
+MD5 4f9d8584711c420d4a611b3f656fcbbb emacs-cvs-22.0.96.ebuild 6654
+RMD160 560d6544e3159d4a483fba5845862d7858d3d317 emacs-cvs-22.0.96.ebuild 6654
+SHA256 e430a2e3782391e2723fb18576644786ce69dbf1686db1ac732026781f54e237 emacs-cvs-22.0.96.ebuild 6654
 EBUILD emacs-cvs-22.0.9999-r7.ebuild 6670 RMD160 e843977065abd6b3603f3c9a746ac45b8f6b00e9 SHA1 4885e79514fec166341abac320b571fa30057d9b SHA256 b893bddb387bac5f93f1e7869a5cd25ceefe4a48e93df45aad07ac3ad1688ec3
 MD5 eae681a69040f7823d8288d63783777c emacs-cvs-22.0.9999-r7.ebuild 6670
 RMD160 e843977065abd6b3603f3c9a746ac45b8f6b00e9 emacs-cvs-22.0.9999-r7.ebuild 6670
 SHA256 b893bddb387bac5f93f1e7869a5cd25ceefe4a48e93df45aad07ac3ad1688ec3 emacs-cvs-22.0.9999-r7.ebuild 6670
-EBUILD emacs-cvs-22.0.9999-r8.ebuild 6665 RMD160 e8ab5edb6c556e34f4e83f07ed88b68c35ec3172 SHA1 60b6c5d14c5e92abf30b18c9078381acaea5c6ae SHA256 744fd90a93ca6c98933cf77bc57922a15aa4fb2b73e1e27929f9df80a0138207
-MD5 d641d26b294c8a563d0920470e14a1a4 emacs-cvs-22.0.9999-r8.ebuild 6665
-RMD160 e8ab5edb6c556e34f4e83f07ed88b68c35ec3172 emacs-cvs-22.0.9999-r8.ebuild 6665
-SHA256 744fd90a93ca6c98933cf77bc57922a15aa4fb2b73e1e27929f9df80a0138207 emacs-cvs-22.0.9999-r8.ebuild 6665
+EBUILD emacs-cvs-22.0.9999-r8.ebuild 6719 RMD160 a85ced7a95ad765af9aa4e9f5936ca8c7a157525 SHA1 26174978363785cd574057ab00b2f3cde02d7650 SHA256 39c180ffdffae6dd6b628b04e3fa45c1358bce445361d6961a71b4786127de79
+MD5 231dcaf1f238a2461d15f85c5d87a88f emacs-cvs-22.0.9999-r8.ebuild 6719
+RMD160 a85ced7a95ad765af9aa4e9f5936ca8c7a157525 emacs-cvs-22.0.9999-r8.ebuild 6719
+SHA256 39c180ffdffae6dd6b628b04e3fa45c1358bce445361d6961a71b4786127de79 emacs-cvs-22.0.9999-r8.ebuild 6719
 EBUILD emacs-cvs-23.0.0-r3.ebuild 6927 RMD160 39d611a99a184cc3ce0a0e9c88567ba207a3b282 SHA1 2ea5c161c24680fd88f58bf85897122a9bdb40e3 SHA256 f158337dedd3410e9b2dc37b35db5656c153fd587a5ab6758889ebe9ddc8c50c
 MD5 3da6e9699bbade5decf3b71a4427a2e8 emacs-cvs-23.0.0-r3.ebuild 6927
 RMD160 39d611a99a184cc3ce0a0e9c88567ba207a3b282 emacs-cvs-23.0.0-r3.ebuild 6927
 SHA256 f158337dedd3410e9b2dc37b35db5656c153fd587a5ab6758889ebe9ddc8c50c emacs-cvs-23.0.0-r3.ebuild 6927
-EBUILD emacs-cvs-23.0.0-r4.ebuild 6923 RMD160 6f116083915a50930204f9d2e88714b82e94a64f SHA1 539b2bdc66ad9a5a2a898f3b89d66dc003a6f572 SHA256 c50741abb5a3ba548a297613f4cee51cc8bc889d4fd8d1951991cb63f43573a5
-MD5 eee9df2c1d87a93e7c4ba02bc6c30bd4 emacs-cvs-23.0.0-r4.ebuild 6923
-RMD160 6f116083915a50930204f9d2e88714b82e94a64f emacs-cvs-23.0.0-r4.ebuild 6923
-SHA256 c50741abb5a3ba548a297613f4cee51cc8bc889d4fd8d1951991cb63f43573a5 emacs-cvs-23.0.0-r4.ebuild 6923
-MISC ChangeLog 5441 RMD160 fabf643993af683d7877d1fc06ab7f9ec95510e8 SHA1 8682591bb9d5801c0d7a4944025e38a71027550a SHA256 3f029305d3bb79fbe57f61637d0163513f0335c4d83d57cddc684b439fd19e9e
-MD5 5607e956ae228839946f24070f21d4fe ChangeLog 5441
-RMD160 fabf643993af683d7877d1fc06ab7f9ec95510e8 ChangeLog 5441
-SHA256 3f029305d3bb79fbe57f61637d0163513f0335c4d83d57cddc684b439fd19e9e ChangeLog 5441
+EBUILD emacs-cvs-23.0.0-r4.ebuild 6976 RMD160 8ee51f83676d9a2f6c70202d21b4b2bad49c6e66 SHA1 667848efccb21e20ab8567c0374a85b6b2c20055 SHA256 316b16dcd80bb9fa61040c6ac097884802688c20dfb475bae392fef0b1abe583
+MD5 b61e19e20043f6e0a1132f00c3f559c2 emacs-cvs-23.0.0-r4.ebuild 6976
+RMD160 8ee51f83676d9a2f6c70202d21b4b2bad49c6e66 emacs-cvs-23.0.0-r4.ebuild 6976
+SHA256 316b16dcd80bb9fa61040c6ac097884802688c20dfb475bae392fef0b1abe583 emacs-cvs-23.0.0-r4.ebuild 6976
+MISC ChangeLog 5619 RMD160 64a35ea46131fe21da265b0ed583d315dec282dd SHA1 a7d612019e9f0723902c1caa6ddfe0e74bd6410b SHA256 4aa2d77bde7e2c3035a93ec137464e3d696e17bcf19c6e97d5c3294e4b72556f
+MD5 dc38aac05983efbf8244bf2200a96fc2 ChangeLog 5619
+RMD160 64a35ea46131fe21da265b0ed583d315dec282dd ChangeLog 5619
+SHA256 4aa2d77bde7e2c3035a93ec137464e3d696e17bcf19c6e97d5c3294e4b72556f ChangeLog 5619
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
 MD5 fcd33d07e4ee719b01157946734f4fe8 metadata.xml 158
 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 metadata.xml 158
