@@ -46,6 +46,7 @@ DEPEND="${RDEPEND}
 PROVIDE="virtual/emacs virtual/editor"
 
 SLOT="23"
+MIN_VERSION="23.0.0"
 LICENSE="GPL-2"
 KEYWORDS="~x86"
 S="${WORKDIR}/${ECVS_LOCALNAME}"
@@ -143,7 +144,7 @@ src_install () {
 	emake install DESTDIR="${D}" || die "make install failed"
 
 	rm "${D}"/usr/bin/emacs-${SLOT}-emacs-${SLOT} || die "removing duplicate emacs executable failed"
-	mv "${D}"/usr/bin/emacs{-emacs,}-${SLOT} || die
+	mv "${D}"/usr/bin/emacs-emacs-${MIN_VERSION} "${D}"/usr/bin/emacs-${SLOT}|| die
 
 	if use aqua ; then
 		einfo "Installing Carbon Emacs..."
